objects/Veda_Fraud_Veri_Check_Report__c.object
<CustomObject>
    <fields>
        <fullName>Driver_License_Result__c</fullName>
        <label>Driver License Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Indicator__c</fullName>
        <label>Name Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Indicator__c</fullName>
        <label>Number Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Summary_Code__c</fullName>
        <label>Report Summary Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Summary__c</fullName>
        <label>Report Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_Fraud__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Fraud</label>
        <referenceTo>Veda_Fraud__c</referenceTo>
        <relationshipName>Veri_Check_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Veda Fraud Veri Check Report</label>
    <nameField>
        <label>Veri Check Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Fraud Veri Check Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>